--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.1.0-beta3'
+    compile 'com.android.support:design:+'
     testCompile 'junit:junit:4.12'
 
     compile 'io.github.controlwear:virtualjoystick:1.3.0'
