--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,10 @@
         android:theme="@style/AppTheme">
 
         <activity
+            android:theme="@style/AppTheme.NoActionBar"
             android:name=".MainActivity"
             android:screenOrientation="landscape"
-            android:theme="@style/Joystick">
+            >
 
             <intent-filter>
 
@@ -23,6 +24,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".VirtualJoystickActivity" />
     </application>
 
 </manifest>
